# dwz

./: Cargo.toml  Dockerfile  README.md  ansible.yaml
.github/workflows/: dwz.yaml
migrations/2022-03-07-083823_dwz/: down.sql  up.sql
src/: controllers.rs  lib.rs  main.rs  models.rs  schema.rs
templates/: base.html  index.html
