[package]
name = "dwz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
env_logger="0.9.0"
diesel = { version = "1.4.8", features = ["mysql", "chrono"] }
chrono = "0.4"
tera = "1.15.0"
fastmurmur3 = "0.1.2"
serde = { version = "1", features = ["derive"] }
