[package]
name = "dwz"
version = "0.1.0"
edition = "2021"
description = "Shorten url"

[dependencies]
actix-web = "4"
env_logger="0.9.0"
diesel = { version = "2.2.3", features = ["mysql", "chrono"] }
chrono = "0.4"
tera = "1.15.0"
fastmurmur3 = "0.1.2"
serde = { version = "1", features = ["derive"] }

[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
